# pdf2gtfs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  compose.yaml  config.template.yaml  gtfs-output.drawio  internal_datastructure.drawio  pyproject.toml  requirements.txt  setup.cfg
.githooks/: README.md  pre-commit
blog_post/: project-transform-timetables-into-gtfs.md
config/: xpdf_pdftotext_config
examples/: base.yaml  gvh_re2_re3.yaml  havelbus_680.yaml  kvv_s1.yaml  rmv_g10.yaml  vag_1.yaml  vvs_s1.yaml
src/: config.template.yaml  finder.py  main.py  p2g_logging.py  p2g_types.py  reader.py  utils.py
src/cli/: arg_parser.py  cli.py  states.py
src/config/: __init__.py  base.py  config.py  errors.py  properties.py
src/datastructures/: __init__.py  base.py  location.py  route.py  schedule.py  stop.py  timetable.py
src/datastructures/gtfs_output/: __init__.py  agency.py  base.py  basestructures.py  calendar.py  calendar_dates.py  gtfsstop.py  handler.py  route.py  routes.py  stop.py  stop_times.py  timetable.py  trips.py
src/finder/: __init__.py  cluster.py  cost.py  distance.py  location.py  location_finder.py  location_nodes.py  osm_node.py  osm_values.py  public_transport.py  route.py  route_finder.py  route_finder2.py  routes.py  scores.py  stops.py  transport.py  types.py
src/locate/: __init__.py  osm_fetcher.py
src/pdf2gtfs/: __init__.py  config.template.yaml  logging.py  main.py  osm_scores.yaml  p2g_logging.py  reader.py  utils.py
src/reader/: __init__.py  base.py  reader.py  testtest.csv
src/test/: __init__.py  test_gtfs_output.py  test_main.py  test_p2g_logging.py  test_rawtable.py  test_reader.py  test_utils.py
src/user_input/: __init__.py  arg_parser.py  cli.py
test/: __init__.py  test_gtfs_output.py  test_main.py  test_rawtable.py  test_reader.py  test_utils.py
test/data/: data.yaml
test/datastructures/: gtfs_output.py
test/test_config/: test_properties.py
test/test_locate/: __init__.py  test_osm_fetcher.py
test/test_user_input/: test_arg_parser.py  test_cli.py
(+187 files in other folders)
