[metadata]
name = pdf2gtfs
version = 0.1
author = Julius Heinzinger
url = https://github.com/heijul/pdf2gtfs
license = Apache 2.0
description = Extract public transport schedule data from PDF files as GTFS feed
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = =src
install_requires =
    pandas >= 1.4.2
    ghostscript >= 0.7
    holidays >= 0.13
    folium >= 0.12.1.post1
    requests >= 2.27.1
    pdfminer.six == 20220319
    setuptools-git
    custom_conf
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where = src

[options.package_data]
pdf2gtfs = config.template.yaml
